--- a/css/style.css
+++ b/css/style.css
@@ -766,11 +766,13 @@ body {
   color: var(--color-white-1);
   line-height: 32px;
   cursor: pointer;
-  transition: .3s ease-in-out;
+  transition: color .3s ease-in-out;
 }
 
 .checkbox-reset {
-  display: none;
+  /* display: none; */
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .checkbox-period__gallery + span {
@@ -798,6 +800,7 @@ body {
   transition: opacity .3s ease-in-out;
 }
 
+/* hover */
 .checkbox-period__gallery:checked + span::before {
   opacity: 1;
 }
@@ -809,6 +812,27 @@ body {
 .checkbox-period__gallery:hover + span {
   border: 1px solid var(--color-purple-2);
 }
+
+/* --- */
+
+.checkbox-period__block:checked {
+  color: var(--color-purple-2);
+}
+
+.checkbox-period__gallery:checked + span {
+  border: 1px solid var(--color-purple-2);
+}
+
+/* --- */
+.checkbox-period__block:focus-visible {
+  color: var(--color-purple-2);
+}
+
+.checkbox-period__gallery:focus-visible + span {
+  border: 1px solid var(--color-purple-2);
+}
+
+
 
 .gallery__slider-button {
   justify-content: space-between;
