--- a/css/style.css
+++ b/css/style.css
@@ -775,7 +775,7 @@ body {
   appearance: none;
 }
 
-.checkbox-period__gallery + span {
+.checkbox-period__gallery ~ .checkbox__square {
   position: absolute;
   top: 0;
   left: 0;
@@ -787,7 +787,7 @@ body {
   transition: .3s ease-in-out;
 }
 
-.checkbox-period__gallery + span::before {
+.checkbox-period__gallery ~ .checkbox__square::before {
   content: '';
   position: absolute;
   top: 3px;
@@ -801,7 +801,7 @@ body {
 }
 
 /* hover */
-.checkbox-period__gallery:checked + span::before {
+.checkbox-period__gallery:checked ~ .checkbox__square::before {
   opacity: 1;
 }
 
@@ -809,29 +809,27 @@ body {
   color: var(--color-purple-2);
 }
 
-.checkbox-period__gallery:hover + span {
+.checkbox-period__gallery:hover ~ .checkbox__square {
   border: 1px solid var(--color-purple-2);
 }
 
 /* --- */
 
-.checkbox-period__block:checked {
+.checkbox-period__gallery:checked ~ .checkbox__text{
   color: var(--color-purple-2);
 }
 
-.checkbox-period__gallery:checked + span {
+.checkbox-period__gallery:checked ~ .checkbox__square {
+  border: 1px solid var(--color-purple-2);
+}
+/*  */
+.checkbox-period__gallery:focus-visible ~ .checkbox__square {
   border: 1px solid var(--color-purple-2);
 }
 
-/* --- */
-.checkbox-period__block:focus-visible {
+.checkbox-period__gallery:focus-visible ~ .checkbox__text{
   color: var(--color-purple-2);
 }
-
-.checkbox-period__gallery:focus-visible + span {
-  border: 1px solid var(--color-purple-2);
-}
-
 
 
 .gallery__slider-button {
